fix(carousel): prevent blurry effect on galaxy S3 and more

--- a/src/css/angular-carousel.css
+++ b/src/css/angular-carousel.css
@@ -9,9 +9,9 @@ ul.rn-carousel-slides {
   position: relative;
   white-space: nowrap;
   overflow: visible;
-  -webkit-transform: translate3d(0px, 0, 0);
-  -moz-transform: translate3d(0px, 0, 0);
-  transform: translate3d(0px, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
   padding: 0;
   margin: 0;
 }
